<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться</string>
    <string name="share_application">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="practicum_url">https://practicum.yandex.ru/android-developer</string>
    <string name="developer_email">sirkwest@yandex.ru</string>
    <string name="email_title_placeholder">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_text_placeholder">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="hello_library">Привет, медиатека!</string>
    <string name="connection_failed">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlist">Плейлист</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_none">Вы не создали ни одного плейлиста</string>
    <string name="create">Создать</string>
    <string name="name_required">Название*</string>
    <string name="description">Описание</string>
    <string name="finish_playlist_creation_question">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="permission_image_access_required_for">Разрешение на доступ к изображениям необходимо для выбора обложки</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="do_you_want_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cannot_share_empty_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="choose_app_for_share">Выберите приложение для отправки</string>
    <string name="do_you_want_to_delete_playlist_name">Хотите удалить плейлист \"%1$s\" ?</string>
    <string name="save">Сохранить</string>
    <string name="playlist_doesnot_have_tracks">Плейлист не имеет треков</string>

    <plurals name="tracks">
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>