<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/yp_blue">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:paddingStart="4dp"
        android:paddingEnd="52dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <Button
        android:id="@+id/search"
        style="@style/MainScreenButton"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/library"
        style="@style/MainScreenButton"
        android:text="@string/media_library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/settings"
        style="@style/MainScreenButton"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />
</LinearLayout>