<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/search"
        style="@style/Toolbar">
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/rounded_rect"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="6dp"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/search"
            android:textColorHint="?attr/hintTextAppearance"
            android:drawableTint="?attr/hintTextAppearance"
            android:textCursorDrawable="@drawable/ic_text_cursor"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:autofillHints="" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="36dp"
            android:src="@drawable/ic_cancel"
            android:visibility="invisible"
            tools:ignore="ContentDescription"
            app:tint="?attr/hintTextAppearance" />
    </FrameLayout>

    <TextView
        android:id="@+id/search_history_title"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:text="@string/you_searched"
        android:gravity="center"
        android:fontFamily="@font/ys_display_medium"
        android:textSize="19sp"
        android:textColor="?attr/colorPrimaryInverse"
        android:layout_marginTop="24dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1">
    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/clear_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="16dp"
        android:textAllCaps="false"
        android:backgroundTint="?attr/colorPrimaryInverse"
        android:textColor="?attr/colorAccent"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/clear_history"
        android:letterSpacing="0.0"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/empty_search_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/empty_search_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="?attr/colorPrimaryInverse"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:visibility="gone"/>
    
    <Button
        android:id="@+id/refresh_button"
        android:text="@string/refresh"
        android:layout_height="36dp"
        android:layout_width="96dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0.0"
        app:cornerRadius="16dp"
        android:visibility="gone"
        android:textFontWeight="500"/>

</LinearLayout>