<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/playlist_creation_toolbar"
        app:title="@string/new_playlist"
        app:navigationIcon="@drawable/ic_arrow_back"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>
    
    <ImageView
        android:id="@+id/playlist_cover_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/playlist_image_empty"
        app:layout_constraintTop_toBottomOf="@id/playlist_creation_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/playlist_name_ti"
        app:layout_constraintDimensionRatio="1:1"
        tools:ignore="contentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_playlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_ti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name_required"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_playlist"
        app:layout_constraintStart_toStartOf="@id/left_guideline_playlist"
        app:layout_constraintTop_toBottomOf="@id/playlist_cover_image"
        style="@style/TextInputEditStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name_te"
            style="@style/TextFieldStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:imeOptions="actionDone"
        />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_ti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_playlist"
        app:layout_constraintStart_toStartOf="@id/left_guideline_playlist"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_ti"
        style="@style/TextInputEditStyle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_te"
            style="@style/TextFieldStyle"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_playlist_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"

        android:paddingVertical="14dp"

        android:text="@string/create"
        android:textAllCaps="false"
        android:letterSpacing="0.0"
        android:textSize="16sp"
        android:textFontWeight="500"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:backgroundTint="@drawable/create_playlist_bt"
        android:enabled="false"

        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline_playlist"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_playlist"
    />

    </androidx.constraintlayout.widget.ConstraintLayout>