<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/player_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/player_toolbar"
            app:navigationIcon="@drawable/ic_arrow_back"
            style="@style/Toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/big_album_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"

            app:layout_constrainedWidth="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toTopOf="@+id/track_name"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toEndOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/player_toolbar"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            style="@style/PlayerMainInfo"

            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/big_album_cover" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            style="@style/PlayerMainInfo"

            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/track_name" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="@dimen/player_play_button_side"
            android:layout_height="@dimen/player_play_button_side"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:src="@drawable/ic_play"

            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/artist_name"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/add_to_button"
            android:layout_width="@dimen/player_add_button_size"
            android:layout_height="@dimen/player_add_button_size"
            android:src="@drawable/add_to_library"

            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            tools:ignore="contentDescription" />

        <ImageView
            android:id="@+id/favorite_button"
            android:layout_width="51dp"
            android:layout_height="51dp"
            tools:src="@drawable/not_favorite"

            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintBottom_toBottomOf="@+id/play_button"
            app:layout_constraintTop_toTopOf="@+id/play_button"
            tools:ignore="contentDescription" />

        <TextView
            android:id="@+id/playback_timer"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:gravity="center"
            android:textColor="?attr/colorPrimary"
            android:fontFamily="@font/ys_display_medium"
            style="@style/PlayerTrackDescriptions"

            app:layout_constraintStart_toStartOf="@+id/play_button"
            app:layout_constraintTop_toBottomOf="@+id/play_button"
            app:layout_constraintEnd_toEndOf="@+id/play_button" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/track_time_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="track_time_label, track_time_value"/>

            <TextView
                android:id="@+id/track_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:text="@string/duration"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintBottom_toTopOf="@+id/album_label" />
            <TextView
                android:id="@+id/track_time_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:textColor="?attr/colorPrimary"
                android:gravity="end"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@+id/track_time_label"
                app:layout_constraintBottom_toTopOf="@+id/album_value" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/album_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="album_label, album_value"/>

            <TextView
                android:id="@+id/album_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:text="@string/album"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintBottom_toTopOf="@+id/release_year_label" />
            <TextView
                android:id="@+id/album_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:textColor="?attr/colorPrimary"
                android:gravity="end"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintBottom_toTopOf="@+id/release_year_value"
                app:layout_constraintStart_toEndOf="@+id/album_label" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/release_year_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="release_year_label, release_year_value"/>

            <TextView
                android:id="@+id/release_year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintBottom_toTopOf="@+id/genre_label"
                app:layout_constraintStart_toStartOf="@+id/left_guideline" />
            <TextView
                android:id="@+id/release_year_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:textColor="?attr/colorPrimary"
                android:gravity="end"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintBottom_toTopOf="@+id/genre_value"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@+id/release_year_label" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/genre_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="genre_label, genre_value"/>

            <TextView
                android:id="@+id/genre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintBottom_toTopOf="@+id/country_label"
                app:layout_constraintStart_toStartOf="@+id/left_guideline" />
            <TextView
                android:id="@+id/genre_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:textColor="?attr/colorPrimary"
                android:gravity="end"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintBottom_toTopOf="@+id/country_value"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@+id/genre_label" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/country_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="country_label, country_value"/>

            <TextView
                android:id="@+id/country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                style="@style/PlayerTrackDescriptions"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/left_guideline" />
            <TextView
                android:id="@+id/country_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/PlayerTrackDescriptions"
                android:layout_marginBottom="@dimen/player_track_description_margin_bottom"
                android:textColor="?attr/colorPrimary"
                android:gravity="end"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintStart_toEndOf="@+id/country_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/player_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:background="?attr/colorAccent"
        app:behavior_hideable="true"
        app:behavior_peekHeight="505dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:background="?attr/colorOnSecondary"
        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:textColor="?attr/colorPrimary"
            android:textSize="19sp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playlist"
        />
        <Button
            android:id="@+id/create_playlist_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cornerRadius="16dp"
            android:textAllCaps="false"
            android:backgroundTint="?attr/colorPrimaryInverse"
            android:textColor="?attr/colorAccent"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:letterSpacing="0.0"
            android:textSize="14sp"
        />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlist_bottom_sheet_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>